# openlase

./: CMakeLists.txt  notes.org
Modules/: FindZeroMQPP.cmake
examples/: CMakeLists.txt  hello.cpp
game/: CMakeLists.txt  calibrator.cpp  lase.cpp  laser.cpp  laser.h  message.h  playClient.cpp  svgotron.cpp
include/: libol.h
libol/: libol.c
res/: show.playlist
tools/: simulator.c
